Fixes spacing of story section in about

--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -155,7 +155,7 @@
     }
 
     .story {
-        padding: 25px 0 100px;
+        padding: 50px 0 100px;
     }
 
     .more-story {
